Allow custom executor java options in spark cluster mode (for instance for customized gc)